--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
@@ -108,6 +108,7 @@
                     <div id="productMenuInfo">
                         <div id="ProductNameUndCost">
                             <div>
+                                    <h3>Tür name: @ViewBag.DorName[d]</h3>
                                     <input style="border: none;" readonly type="text" name="DopelName" value="@item.Name" />
                                     <input style="border: none;" type="hidden" name="NameSystem" value="@item.NameSystem" />
                                     <input style="border: none;" id="compName" type="hidden" value="@item.companyName" />
@@ -248,6 +249,7 @@
                         <div id="ProductNameUndCost">
 
                             <div>
+                                    <h3>Tür name: @ViewBag.DorName[d]</h3>
                                     <input style="border: none;" readonly type="text" name="KnayfName" value="@item.Name" />
                                     <input style="border: none;" type="hidden" name="NameSystem" value="@item.NameSystem" />
                                     <input style="border: none;" id="compName" type="hidden" value="@item.companyName" />
@@ -390,6 +392,7 @@
                         <div id="ProductNameUndCost">
 
                             <div>
+                                    <h3>Tür name: @ViewBag.DorName[d]</h3>
                                     <input style="border: none;" readonly type="text" name="HalbName" value="@item.Name" />
                                     <input style="border: none;" type="hidden" name="NameSystem" value="@item.NameSystem" />
                                     <input style="border: none;" id="compName" type="hidden" value="@item.companyName" />
@@ -484,9 +487,7 @@
                        
                 </div>
                     <div id="myModal-@d" class="modal">
-
                         <div class="modal-content">
-
                             <span onclick="closedModal(@d)" class="close">&times;</span>
                             <div style="display:grid; grid-template-columns: 450px 500px;">
                                 <div id="productImage">
@@ -517,8 +518,8 @@
                     </div>
                     <div id="productMenuInfo">
                         <div id="ProductNameUndCost">
-
                             <div>
+                                    <h3>Tür name: @ViewBag.DorName[d]</h3>
                                     <input style="border: none;" readonly type="text" name="HelbName" value="@item.Name" />
                                     <input style="border: none;" type="hidden" name="NameSystem" value="@item.NameSystem" />
                                     <input style="border: none;" id="compName" type="hidden" value="@item.companyName" />
@@ -609,8 +610,8 @@
                     </div>
                     <div id="productMenuInfo">
                         <div id="ProductNameUndCost">
-
                             <div>
+                                    <h3>Tür name: @ViewBag.DorName[d]</h3>
                                     <input style="border: none;" readonly type="text" name="VorhanName" value="@item.Name" />
                                     <input style="border: none;" type="hidden" name="NameSystem" value="@item.NameSystem" />
                                     <input style="border: none;" id="compName" type="hidden" value="@item.companyName" />
@@ -719,6 +720,7 @@
                         <div id="ProductNameUndCost">
 
                             <div>
+                                    <h3>Tür name: @ViewBag.DorName[d]</h3>
                                     <input style="border: none;" readonly type="text" name="AussenName" value="@item.Name" />
                                     <input style="border: none;" type="hidden" name="NameSystem" value="@item.NameSystem" />
                                     <input style="border: none;" id="compName" type="hidden" value="@item.companyName" />
