--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/PagePersonalOrders.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/PagePersonalOrders.cshtml
@@ -59,6 +59,7 @@
                                 <h4>aussen: @orderItem[ProudctItemCounter].Aussen</h4>
                                 <h4>innen: @orderItem[ProudctItemCounter].Intern</h4>
                                 <h4>Option - @orderItem[ProudctItemCounter].Option</h4> 
+                                <h4>Count: @orderItem[ProudctItemCounter].Count</h4> 
                                 UserOrderId = @orderList[z].Id;
                                 ProudctItemCounter++;
                             }
