--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Register.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Register.cshtml
@@ -20,6 +20,8 @@
                 </div>
             </div>
 
+            <input type="hidden" name="returnUrl"  id="returnUrl"/>
+
             <div class="row mb-3">
                 <label class="col-sm-4 col-form-label">Last Name</label>
                 <div class="col-sm-8">
@@ -86,3 +88,11 @@
     </div>
     
 </div>
+<script>
+    let returnUrl = document.getElementById("returnUrl");
+    function back()
+    {       
+        returnUrl.value = localStorage.getItem('currentURL');
+    }
+    back()
+</script>
