--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
@@ -67,7 +67,7 @@
                         <h1>Size  <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
                         <div id="Aussen_Innen_ProfilDopel">
 
-                            <div id="AussenProfilDopel">
+                            <div id="AllSize">
                                 <input type="number" placeholder="Size" required class="form-control" step="0.01" name="aussen" />
 
                             </div>
@@ -147,7 +147,7 @@
 
         let plusAussen_Innen = document.getElementById('addAussen_Innen');
 
-        let docAussen = document.getElementById('AussenProfilDopel');
+        let docAussen = document.getElementById('AllSize');
         let docCosted = document.getElementById('costedSize');
 
         let sum = document.querySelectorAll('#cost');
